<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light_color"

    android:padding="@dimen/activity_padding"
    tools:context="com.marcin.jasi.expensesprotector.createAccount.presentation.ui.CreateAccountActivity">

    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_login"
        android:textColor="@color/primary_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/login_input"
        app:layout_constraintEnd_toStartOf="@+id/vertical_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_input" />

    <EditText
        android:id="@+id/login_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_login"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vertical_space"
        app:layout_constraintTop_toBottomOf="@+id/top_space" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_password"
        android:textColor="@color/primary_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/password_input"
        app:layout_constraintEnd_toStartOf="@+id/vertical_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_password"
        android:inputType="textWebPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vertical_space"
        app:layout_constraintTop_toBottomOf="@+id/login_input" />

    <TextView
        android:id="@+id/confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_activity_confirm_text"
        android:textColor="@color/primary_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_password_input"
        app:layout_constraintEnd_toStartOf="@+id/vertical_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirm_password_input" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_password"
        android:inputType="textWebPassword"
        app:layout_constraintBottom_toTopOf="@+id/bottom_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vertical_space"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/secondary_color"
        android:text="@string/login_activity_cancel"
        android:textColor="@color/secondary_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/create_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/secondary_color"
        android:text="@string/create_account_activity_create"
        android:textColor="@color/secondary_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_button" />

    <ProgressBar
        android:id="@+id/create_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/create_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_space" />

    <Space
        android:id="@+id/bottom_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Space
        android:id="@+id/top_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Space
        android:id="@+id/vertical_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
